<resources>
    <string name="app_name">Gestion clients</string>
    <string name="name">Nom</string>
    <string name="firstname">Prenom</string>
    <string name="sex">Sexe</string>
    <string name="niveau">Niveau</string>
    <string name="email">Email</string>
    <string name="add">Ajouter</string>
    <string name="active">Actif</string>
    <string name="age">Age</string>
    <string name="datenaissance">Date de naissance</string>
    <string name="client_added">Client ajouté !</string>
    <string name="categorie_parametres">Affichage</string>
</resources>
